# llm-cache-service_hpot

./: .gitignore  Cargo.toml  Dockerfile  README.md  sonar-project.properties
.github/workflows/: build.yml
.sqlx/: query-773fdf2440a13a2bf429d5c60cce30e7844196731739fa300c2919c7a0aad121.json  query-9e9b60ac68ab3171ff5d9c90cbabd5bcc8ab9451bac5106d4b0e75e6fcc21a60.json  query-a3c3038c0f85ce2870291adc3f736122a93b6c580585a23f3eb8ac83e8f7a141.json  query-f6c74c3789f9bed63b6c0fed5b2b41b2a3594099281257f8b1807b7475220e8e.json
migrations/: 20251021112050_create_cache_table.sql
prompts/cowrie/: config.toml.sample  system.txt
prompts/dionaea/: system.txt
src/: config.rs  lib.rs  main.rs  prompt_provider.rs
src/cache/: manager.rs  mock_cache.rs  mod.rs  redis_cache.rs  sqlite_cache.rs  traits.rs
src/llm_providers/: gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  traits.rs
src/prompts/: loader.rs  mod.rs  prompt_provider.rs  provider_factory.rs
tests/: cachelayer_redis.rs  cachelayer_sqlite.rs  cachemanager_redis_sqlite.rs
tests/common/: mod.rs
