[package]
name = "llm-cache-service"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.0"
bb8-redis = "0.24.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
thiserror = "2.0.17"
serde_json = "1.0.145"
testcontainers = "0.25.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
async-trait = "0.1.89"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
toml = "0.9.8"
